# dns_resolver

./: CMakeLists.txt  vcpkg.json
examples/: BatchDNSResolver.cpp  CMakeLists.txt  ConfigExample.cpp
include/: DNSCache.h  DNSCachePersistor.h  DNSCommon.h  DNSConfig.h  DNSConfigValidator.h  DNSConfigVersion.h  DNSEvent.h  DNSMetrics.h  DNSResolver.h  DNSUtils.h
src/: DNSCache.cpp  DNSCachePersistor.cpp  DNSConfig.cpp  DNSConfigValidator.cpp  DNSConfigVersion.cpp  DNSEvent.cpp  DNSMetrics.cpp  DNSResolver.cpp
